Updated AUTO_TYPING to on for session BLADE=3UMRzBLJ#Jv1nn0_hmNGDsEyY9GyKd6xVjO5Y8EPD94_BNj9PNVE

--- a/config.json
+++ b/config.json
@@ -2020,7 +2020,7 @@
   "BLADE=3UMRzBLJ#Jv1nn0_hmNGDsEyY9GyKd6xVjO5Y8EPD94_BNj9PNVE": {
     "public": true,
     "STATUS_REACT_EMOJIS": "❤️",
-    "AUTO_TYPING": false,
+    "AUTO_TYPING": true,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
     "CAPTION": "*☘️ මේ වගේ ලස්සන සිංදු අහන්න අපිව Follow කරන්න 😫🩵*\n\n_*රියැක්ට් එකකුත් දාන් යන්න*_ 😍💚",
