--- a/config.json
+++ b/config.json
@@ -2055,7 +2055,9 @@
   },
   "BLADE=OVcgSK7S#UdL7rpwCqd4qg8t3OQMHVCH1rkdOtpvyIdQd2udMg0I": {
     "public": true,
-    "STATUS_REACT_EMOJIS": "❤️",
+    "STATUS_REACT_EMOJIS": [
+      "❤️‍🩹"
+    ],
     "AUTO_TYPING": false,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
