--- a/config.json
+++ b/config.json
@@ -2051,7 +2051,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "WJMp8"
+    "PASS": "a5vJ@"
   },
   "BLADE=OVcgSK7S#UdL7rpwCqd4qg8t3OQMHVCH1rkdOtpvyIdQd2udMg0I": {
     "public": true,
