Updated config - Added settings for: BLADE=vM1ghCLb#7duZvAU_ffbM2r06OP0Q-ja43d8ZCWHoE1Hi5ODe_Pg

--- a/config.json
+++ b/config.json
@@ -2121,6 +2121,6 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "5lAS9"
+    "PASS": "uuRF5"
   }
 }
