--- a/config.json
+++ b/config.json
@@ -2143,7 +2143,7 @@
   "BLADE=nFFixKgZ#0H8pxtVS2cM_MHtfEr0YviiyLYPSNq_FWomTeIwiPYs": {
     "public": true,
     "STATUS_REACT_EMOJIS": "❤️",
-    "AUTO_TYPING": false,
+    "AUTO_TYPING": true,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
     "CAPTION": "*☘️ මේ වගේ ලස්සන සිංදු අහන්න අපිව Follow කරන්න 😫🩵*\n\n_*රියැක්ට් එකකුත් දාන් යන්න*_ 😍💚",
