--- a/config.json
+++ b/config.json
@@ -2142,7 +2142,9 @@
   },
   "BLADE=nFFixKgZ#0H8pxtVS2cM_MHtfEr0YviiyLYPSNq_FWomTeIwiPYs": {
     "public": true,
-    "STATUS_REACT_EMOJIS": "❤️",
+    "STATUS_REACT_EMOJIS": [
+      "❤️"
+    ],
     "AUTO_TYPING": true,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
