--- a/config.json
+++ b/config.json
@@ -2147,7 +2147,7 @@
     ],
     "AUTO_TYPING": true,
     "PREFIX": ".",
-    "AUTO_RECORDING": false,
+    "AUTO_RECORDING": true,
     "CAPTION": "*☘️ මේ වගේ ලස්සන සිංදු අහන්න අපිව Follow කරන්න 😫🩵*\n\n_*රියැක්ට් එකකුත් දාන් යන්න*_ 😍💚",
     "ALLWAYS_OFFLINE": "true",
     "OWNER_NUMBER": "94764497078",
