--- a/config.json
+++ b/config.json
@@ -2174,6 +2174,6 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "oto2%"
+    "PASS": "9qti$"
   }
 }
