--- a/config.json
+++ b/config.json
@@ -2116,12 +2116,12 @@
     "ALLWAYS_OFFLINE": "true",
     "OWNER_NUMBER": "94764497078",
     "MENU_TYPE": "v3",
-    "BOT_NAME": "Blade md",
+    "BOT_NAME": "Switch-Blade md",
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "uuRF5"
+    "PASS": "czxza"
   },
   "BLADE=vZ1BlDIA#na_36yNZJV7sH7S_RsIdX8BYYcBN5JX6NGmyzlQ3lcM": {
     "public": true,
