Updated config - Added settings for: BLADE=vM1ghCLb#7duZvAU_ffbM2r06OP0Q-ja43d8ZCWHoE1Hi5ODe_Pg

--- a/config.json
+++ b/config.json
@@ -2046,12 +2046,12 @@
     "ALLWAYS_OFFLINE": "true",
     "OWNER_NUMBER": "94764497078",
     "MENU_TYPE": "v3",
-    "BOT_NAME": "Switch-Blade md",
+    "BOT_NAME": "Blade md",
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "FVSn$"
+    "PASS": "a5vJ@"
   },
   "BLADE=OVcgSK7S#UdL7rpwCqd4qg8t3OQMHVCH1rkdOtpvyIdQd2udMg0I": {
     "public": true,
@@ -2116,12 +2116,12 @@
     "ALLWAYS_OFFLINE": "true",
     "OWNER_NUMBER": "94764497078",
     "MENU_TYPE": "v3",
-    "BOT_NAME": "Blade md",
+    "BOT_NAME": "Switch-Blade md",
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "uuRF5"
+    "PASS": "3Y1Vx"
   },
   "BLADE=vZ1BlDIA#na_36yNZJV7sH7S_RsIdX8BYYcBN5JX6NGmyzlQ3lcM": {
     "public": true,
