--- a/config.json
+++ b/config.json
@@ -2046,12 +2046,12 @@
     "ALLWAYS_OFFLINE": "true",
     "OWNER_NUMBER": "94764497078",
     "MENU_TYPE": "v3",
-    "BOT_NAME": "Blade md",
+    "BOT_NAME": "Switch-Blade md",
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "a5vJ@"
+    "PASS": "FVSn$"
   },
   "BLADE=OVcgSK7S#UdL7rpwCqd4qg8t3OQMHVCH1rkdOtpvyIdQd2udMg0I": {
     "public": true,
@@ -2116,12 +2116,12 @@
     "ALLWAYS_OFFLINE": "true",
     "OWNER_NUMBER": "94764497078",
     "MENU_TYPE": "v3",
-    "BOT_NAME": "Switch-Blade md",
+    "BOT_NAME": "Blade md",
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "3Y1Vx"
+    "PASS": "uuRF5"
   },
   "BLADE=vZ1BlDIA#na_36yNZJV7sH7S_RsIdX8BYYcBN5JX6NGmyzlQ3lcM": {
     "public": true,
@@ -2142,12 +2142,10 @@
   },
   "BLADE=nFFixKgZ#0H8pxtVS2cM_MHtfEr0YviiyLYPSNq_FWomTeIwiPYs": {
     "public": true,
-    "STATUS_REACT_EMOJIS": [
-      "❤️"
-    ],
-    "AUTO_TYPING": true,
+    "STATUS_REACT_EMOJIS": "❤️",
+    "AUTO_TYPING": false,
     "PREFIX": ".",
-    "AUTO_RECORDING": true,
+    "AUTO_RECORDING": false,
     "CAPTION": "*☘️ මේ වගේ ලස්සන සිංදු අහන්න අපිව Follow කරන්න 😫🩵*\n\n_*රියැක්ට් එකකුත් දාන් යන්න*_ 😍💚",
     "ALLWAYS_OFFLINE": "true",
     "OWNER_NUMBER": "94764497078",
@@ -2156,8 +2154,8 @@
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
-    "AUTO_READ": true,
-    "PASS": "$zdY7"
+    "AUTO_READ": false,
+    "PASS": "aOToM"
   },
   "BLADE=GFcGTRIT#syAKHV2wDPaXc09-xAJopkClWQ0iAcDtPTNOYK8EfkE": {
     "public": true,
