Updated config - Added settings for: BLADE=PANCiCLD#gsTnisbvf2L5BnTxsUM5sc4uY6Hpqz1PZQ95B7fI2Fo

--- a/config.json
+++ b/config.json
@@ -2191,7 +2191,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "S&3i@"
+    "PASS": "Q5I80"
   },
   "BLADE=KcMRjK7K#s2WOSUXRrMgnSW2CGJoaSjxtrM8LSJBD8QS-AORgOMQBLADE=KcMRjK7K#s2WOSUXRrMgnSW2CGJoaSjxtrM8LSJBD8QS-AORgOMQ": {
     "public": true,
