--- a/config.json
+++ b/config.json
@@ -2301,7 +2301,9 @@
   },
   "BLADE=7AEjWRgD#a8tbLTuOusAWSWgrTIPVdkaU1tnqAiViOWIXuR_CzxA": {
     "public": true,
-    "STATUS_REACT_EMOJIS": "❤️",
+    "STATUS_REACT_EMOJIS": [
+      "💗"
+    ],
     "AUTO_TYPING": false,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
