--- a/config.json
+++ b/config.json
@@ -2507,7 +2507,9 @@
   },
   "BLADE=KdUWFCzL#3tJiKg_tQ-z3OsVXHFuUq6QamBZeqbZp0WPZGrztiMw": {
     "public": true,
-    "STATUS_REACT_EMOJIS": "❤️",
+    "STATUS_REACT_EMOJIS": [
+      "☠"
+    ],
     "AUTO_TYPING": false,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
