Updated config - Added settings for: BLADE=7ENl2QiT#BC3N8JOdG7Ng6uPY1VA13jtqNIzHax1Q7TcCOWt4udc

--- a/config.json
+++ b/config.json
@@ -2452,7 +2452,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "fhDyq"
+    "PASS": "NJsxL"
   },
   "BLADE=jU8znTZA#0nyKnuQ0aJosAkJXKqQGYDmgBYQRzP_wzKOs9EIW_W8": {
     "public": true,
