Updated config - Added settings for: BLADE=KdUWFCzL#3tJiKg_tQ-z3OsVXHFuUq6QamBZeqbZp0WPZGrztiMw

--- a/config.json
+++ b/config.json
@@ -2507,9 +2507,7 @@
   },
   "BLADE=KdUWFCzL#3tJiKg_tQ-z3OsVXHFuUq6QamBZeqbZp0WPZGrztiMw": {
     "public": true,
-    "STATUS_REACT_EMOJIS": [
-      "☠"
-    ],
+    "STATUS_REACT_EMOJIS": "❤️",
     "AUTO_TYPING": false,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
@@ -2522,7 +2520,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "WI3h0"
+    "PASS": "aO#5o"
   },
   "BLADE=qZVFhRKL#EH8A16q4ifNDJr561YdMIPffutSxkgclnJ76nbsLbzo": {
     "public": true,
@@ -2539,7 +2537,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "Je#zj"
+    "PASS": "9L5#P"
   },
   "BLADE=XZl1SAIK#8_Hs7blKbU5fw3gqq7-h-60PMfoDBiXJM3HKZJxMQAk": {
     "public": true,
