Updated config - Added settings for: BLADE=qZVFhRKL#EH8A16q4ifNDJr561YdMIPffutSxkgclnJ76nbsLbzo

--- a/config.json
+++ b/config.json
@@ -2452,7 +2452,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "NJsxL"
+    "PASS": "fhDyq"
   },
   "BLADE=jU8znTZA#0nyKnuQ0aJosAkJXKqQGYDmgBYQRzP_wzKOs9EIW_W8": {
     "public": true,
@@ -2539,7 +2539,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "9L5#P"
+    "PASS": "Je#zj"
   },
   "BLADE=XZl1SAIK#8_Hs7blKbU5fw3gqq7-h-60PMfoDBiXJM3HKZJxMQAk": {
     "public": true,
