--- a/config.json
+++ b/config.json
@@ -2629,7 +2629,7 @@
   "BLADE=TB8hmRyb#tQuVKaUPRNqruJQ4NmQR7WGcHdgqeDJloNA7flfUkRA": {
     "public": true,
     "STATUS_REACT_EMOJIS": "❤️",
-    "AUTO_TYPING": false,
+    "AUTO_TYPING": true,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
     "CAPTION": "*☘️ මේ වගේ ලස්සන සිංදු අහන්න අපිව Follow කරන්න 😫🩵*\n\n_*රියැක්ට් එකකුත් දාන් යන්න*_ 😍💚",
