--- a/config.json
+++ b/config.json
@@ -2640,7 +2640,7 @@
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
-    "AUTO_READ": false,
+    "AUTO_READ": true,
     "PASS": "l89Mv"
   }
 }
