--- a/config.json
+++ b/config.json
@@ -2594,7 +2594,9 @@
   },
   "BLADE=zRESXAyS#UT5yQmhPSPjDs1s4v4MyBz2LW8W4ZBwsH0Fz2GlkS94": {
     "public": true,
-    "STATUS_REACT_EMOJIS": "❤️",
+    "STATUS_REACT_EMOJIS": [
+      "💝"
+    ],
     "AUTO_TYPING": false,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
