Updated config - Added settings for: BLADE=2INS0awQ#fIgwb4hvCUyY4IyXWpIztlpCSPJylbhK4bzieonZzgw

--- a/config.json
+++ b/config.json
@@ -2781,6 +2781,6 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "niZn@"
+    "PASS": "Xtq40"
   }
 }
