Updated AUTO_READ to off for session BLADE=OUshnRIS#nKlCGJSl7pIuRItmX6_jXDO5MHpAWA0q6Q6haErzLFc

--- a/config.json
+++ b/config.json
@@ -2850,7 +2850,7 @@
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
-    "AUTO_READ": true,
+    "AUTO_READ": false,
     "PASS": "Xg0sR"
   },
   "BLADE=fAF2FL6I#HS6I7upcDVDNLnxIVR-2MnHjTimcWR7-2hXdb5oge2w": {
