Updated config - Added settings for: BLADE=2M8gyLiA#dAW8fVVZitPGQ7k3d8vc6vzPyPvuk5KhfrdwCS9jYJ8

--- a/config.json
+++ b/config.json
@@ -2938,6 +2938,6 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "sa5Kr"
+    "PASS": "YaNUe"
   }
 }
