Updated config - Added settings for: BLADE=CVUwTbhK#9ncsgNDtTURsKMEE9O6xYOejy46XWtjZ0pJUwBwTS_I

--- a/config.json
+++ b/config.json
@@ -3061,6 +3061,6 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "6l159"
+    "PASS": "22!0A"
   }
 }
