--- a/config.json
+++ b/config.json
@@ -3082,7 +3082,9 @@
   },
   "BLADE=Hc8WFQbL#eFn_pVpBEwmuQROiezttYZRqf6trypHeQIPrmY_r-ws": {
     "public": true,
-    "STATUS_REACT_EMOJIS": "❤️",
+    "STATUS_REACT_EMOJIS": [
+      "💝"
+    ],
     "AUTO_TYPING": false,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
