--- a/config.json
+++ b/config.json
@@ -2867,7 +2867,7 @@
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
-    "AUTO_READ": false,
+    "AUTO_READ": true,
     "PASS": "fC#kn"
   },
   "BLADE=qIlzHBgZ#GH6UePusgjMRqQlWVh5-q_FaFWb9U6dGAG17YAIkZDc": {
