--- a/config.json
+++ b/config.json
@@ -3152,7 +3152,9 @@
   },
   "BLADE=uV0HjBxQ#-GbbHUWkJy0k8BpnQNLMzZ_575fvrmdnsm0kPEciTFY": {
     "public": true,
-    "STATUS_REACT_EMOJIS": "❤️",
+    "STATUS_REACT_EMOJIS": [
+      "🍁"
+    ],
     "AUTO_TYPING": false,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
