Updated AUTO_READ to off for session BLADE=uV0HjBxQ#-GbbHUWkJy0k8BpnQNLMzZ_575fvrmdnsm0kPEciTFY

--- a/config.json
+++ b/config.json
@@ -3166,7 +3166,7 @@
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
-    "AUTO_READ": true,
+    "AUTO_READ": false,
     "PASS": "gtyua"
   },
   "BLADE=KZdizD7J#5Sps-vCHVwoGS-iSqmwh_dqz5PNWENhUaLTnRtcHgAg": {
