--- a/config.json
+++ b/config.json
@@ -3205,7 +3205,9 @@
   },
   "BLADE=eBExCa5C#FQks02yIMgpFMnrPrW7kJoXp1L1AvDXhsHhuUjrg5d0": {
     "public": true,
-    "STATUS_REACT_EMOJIS": "❤️",
+    "STATUS_REACT_EMOJIS": [
+      "🍄"
+    ],
     "AUTO_TYPING": false,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
