Updated STATUS_REACT_EMOJIS to 💋 for session BLADE=GRkDFARa#BQUg_eYqyuJDB_yN9rHAO1wF5b4snINWRTADn_m_zLM

--- a/config.json
+++ b/config.json
@@ -3279,7 +3279,9 @@
   },
   "BLADE=GRkDFARa#BQUg_eYqyuJDB_yN9rHAO1wF5b4snINWRTADn_m_zLM": {
     "public": true,
-    "STATUS_REACT_EMOJIS": "❤️",
+    "STATUS_REACT_EMOJIS": [
+      "💋"
+    ],
     "AUTO_TYPING": false,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
