Updated config - Added settings for: BLADE=DckTjKyY#MROaD5BL-NLHVImSX5CNNMg69keHOZY0WuL5_GyPFeQ

--- a/config.json
+++ b/config.json
@@ -3008,7 +3008,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "M8SpN"
+    "PASS": "LGV&!"
   },
   "BDLQN11T": {
     "public": true,
