Updated config - Added settings for: BLADE=Hc8WFQbL#eFn_pVpBEwmuQROiezttYZRqf6trypHeQIPrmY_r-ws

--- a/config.json
+++ b/config.json
@@ -3082,9 +3082,7 @@
   },
   "BLADE=Hc8WFQbL#eFn_pVpBEwmuQROiezttYZRqf6trypHeQIPrmY_r-ws": {
     "public": true,
-    "STATUS_REACT_EMOJIS": [
-      "💝"
-    ],
+    "STATUS_REACT_EMOJIS": "❤️",
     "AUTO_TYPING": false,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
@@ -3097,7 +3095,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "V#&Lq"
+    "PASS": "hfIMf"
   },
   "BLADE=eYFhTLTK#INo578RBKZD-4I2p59kLJWMGJSAn9KTRk08S4CSn8ps": {
     "public": true,
