Updated config - Added settings for: BLADE=fcNgSBiA#--jrtn6N417wtAkvzFsdBKArrG95xIayZCiEUX-iSEg

--- a/config.json
+++ b/config.json
@@ -3502,6 +3502,6 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "mUSes"
+    "PASS": "tRa5X"
   }
 }
