Updated config - Added settings for: 𝙰𝚂𝙸𝚃𝙷𝙰-𝙼𝙳=UQoWTAqS#1TgMqh7aDV71-MOK1Zf7Qclmkl8wRGLlgXDMNA5DdW8

--- a/config.json
+++ b/config.json
@@ -2830,7 +2830,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "o2ZrV"
+    "PASS": "Iuu5M"
   },
   "BLADE=OUshnRIS#nKlCGJSl7pIuRItmX6_jXDO5MHpAWA0q6Q6haErzLFc": {
     "public": true,
