--- a/config.json
+++ b/config.json
@@ -2830,13 +2830,11 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "Iuu5M"
+    "PASS": "o2ZrV"
   },
   "BLADE=OUshnRIS#nKlCGJSl7pIuRItmX6_jXDO5MHpAWA0q6Q6haErzLFc": {
     "public": true,
-    "STATUS_REACT_EMOJIS": [
-      "👋"
-    ],
+    "STATUS_REACT_EMOJIS": "❤️",
     "AUTO_TYPING": false,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
@@ -2849,7 +2847,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "Xg0sR"
+    "PASS": "8Pqzq"
   },
   "BLADE=fAF2FL6I#HS6I7upcDVDNLnxIVR-2MnHjTimcWR7-2hXdb5oge2w": {
     "public": true,
@@ -3027,8 +3025,10 @@
   },
   "BLADE=uFU0zbzA#Pl92vao9CjpwVFS2M0RhG9eGVyIwVV1D1L2cdcLwBow": {
     "public": true,
-    "STATUS_REACT_EMOJIS": "❤️",
-    "AUTO_TYPING": false,
+    "STATUS_REACT_EMOJIS": [
+      "🥴"
+    ],
+    "AUTO_TYPING": true,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
     "CAPTION": "*☘️ මේ වගේ ලස්සන සිංදු අහන්න අපිව Follow කරන්න 😫🩵*\n\n_*රියැක්ට් එකකුත් දාන් යන්න*_ 😍💚",
@@ -3040,7 +3040,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "Bwlip"
+    "PASS": "rMo#z"
   },
   "BLADE=CVUwTbhK#9ncsgNDtTURsKMEE9O6xYOejy46XWtjZ0pJUwBwTS_I": {
     "public": true,
