Updated config - Added settings for: BLADE=nZdwzYQK#shx67v2zE1-9X8BViwdz0IhAwxgWa0ENlQ9MXvTWczs

--- a/config.json
+++ b/config.json
@@ -2830,11 +2830,13 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "o2ZrV"
+    "PASS": "Iuu5M"
   },
   "BLADE=OUshnRIS#nKlCGJSl7pIuRItmX6_jXDO5MHpAWA0q6Q6haErzLFc": {
     "public": true,
-    "STATUS_REACT_EMOJIS": "❤️",
+    "STATUS_REACT_EMOJIS": [
+      "👋"
+    ],
     "AUTO_TYPING": false,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
@@ -2847,7 +2849,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "8Pqzq"
+    "PASS": "Xg0sR"
   },
   "BLADE=fAF2FL6I#HS6I7upcDVDNLnxIVR-2MnHjTimcWR7-2hXdb5oge2w": {
     "public": true,
@@ -2938,12 +2940,10 @@
   },
   "BLADE=nZdwzYQK#shx67v2zE1-9X8BViwdz0IhAwxgWa0ENlQ9MXvTWczs": {
     "public": true,
-    "STATUS_REACT_EMOJIS": [
-      "😅"
-    ],
+    "STATUS_REACT_EMOJIS": "❤️",
     "AUTO_TYPING": false,
     "PREFIX": ".",
-    "AUTO_RECORDING": true,
+    "AUTO_RECORDING": false,
     "CAPTION": "*☘️ මේ වගේ ලස්සන සිංදු අහන්න අපිව Follow කරන්න 😫🩵*\n\n_*රියැක්ට් එකකුත් දාන් යන්න*_ 😍💚",
     "ALLWAYS_OFFLINE": "true",
     "OWNER_NUMBER": "94764497078",
@@ -2953,7 +2953,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "@JsSV"
+    "PASS": "HbmEI"
   },
   "BLADE=qMtxARYD#gab8x6meMHKlXRtJAmnBi6d2mUEiPx1ipv9MBdPg-nQ": {
     "public": true,
