Updated config - Added settings for: BLADE=nZdwzYQK#shx67v2zE1-9X8BViwdz0IhAwxgWa0ENlQ9MXvTWczs

--- a/config.json
+++ b/config.json
@@ -2953,7 +2953,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "HbmEI"
+    "PASS": "CU5CE"
   },
   "BLADE=qMtxARYD#gab8x6meMHKlXRtJAmnBi6d2mUEiPx1ipv9MBdPg-nQ": {
     "public": true,
