Updated config - Added settings for: BLADE=jY9DnKYC#vn8LBejQbsDoKVArWiulfV_p2JNxtVhkFj_awRJLVVA

--- a/config.json
+++ b/config.json
@@ -2830,13 +2830,11 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "Iuu5M"
+    "PASS": "o2ZrV"
   },
   "BLADE=OUshnRIS#nKlCGJSl7pIuRItmX6_jXDO5MHpAWA0q6Q6haErzLFc": {
     "public": true,
-    "STATUS_REACT_EMOJIS": [
-      "👋"
-    ],
+    "STATUS_REACT_EMOJIS": "❤️",
     "AUTO_TYPING": false,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
@@ -2849,7 +2847,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "Xg0sR"
+    "PASS": "8Pqzq"
   },
   "BLADE=fAF2FL6I#HS6I7upcDVDNLnxIVR-2MnHjTimcWR7-2hXdb5oge2w": {
     "public": true,
@@ -2940,10 +2938,12 @@
   },
   "BLADE=nZdwzYQK#shx67v2zE1-9X8BViwdz0IhAwxgWa0ENlQ9MXvTWczs": {
     "public": true,
-    "STATUS_REACT_EMOJIS": "❤️",
+    "STATUS_REACT_EMOJIS": [
+      "😅"
+    ],
     "AUTO_TYPING": false,
     "PREFIX": ".",
-    "AUTO_RECORDING": false,
+    "AUTO_RECORDING": true,
     "CAPTION": "*☘️ මේ වගේ ලස්සන සිංදු අහන්න අපිව Follow කරන්න 😫🩵*\n\n_*රියැක්ට් එකකුත් දාන් යන්න*_ 😍💚",
     "ALLWAYS_OFFLINE": "true",
     "OWNER_NUMBER": "94764497078",
@@ -2953,7 +2953,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "CU5CE"
+    "PASS": "@JsSV"
   },
   "BLADE=qMtxARYD#gab8x6meMHKlXRtJAmnBi6d2mUEiPx1ipv9MBdPg-nQ": {
     "public": true,
@@ -3428,7 +3428,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "a4r7I"
+    "PASS": "#z45c"
   },
   "BLADE=3N022TSL#PGRbO7JehCGU_Jp5dGC-8XzR8WoZ-Cg0dLLi-JzpNLM": {
     "public": true,
