Updated config - Added settings for: BLADE=GRkDFARa#BQUg_eYqyuJDB_yN9rHAO1wF5b4snINWRTADn_m_zLM

--- a/config.json
+++ b/config.json
@@ -2830,11 +2830,13 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "o2ZrV"
+    "PASS": "Iuu5M"
   },
   "BLADE=OUshnRIS#nKlCGJSl7pIuRItmX6_jXDO5MHpAWA0q6Q6haErzLFc": {
     "public": true,
-    "STATUS_REACT_EMOJIS": "❤️",
+    "STATUS_REACT_EMOJIS": [
+      "👋"
+    ],
     "AUTO_TYPING": false,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
@@ -2847,7 +2849,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "8Pqzq"
+    "PASS": "Xg0sR"
   },
   "BLADE=fAF2FL6I#HS6I7upcDVDNLnxIVR-2MnHjTimcWR7-2hXdb5oge2w": {
     "public": true,
@@ -3025,10 +3027,8 @@
   },
   "BLADE=uFU0zbzA#Pl92vao9CjpwVFS2M0RhG9eGVyIwVV1D1L2cdcLwBow": {
     "public": true,
-    "STATUS_REACT_EMOJIS": [
-      "🥴"
-    ],
-    "AUTO_TYPING": true,
+    "STATUS_REACT_EMOJIS": "❤️",
+    "AUTO_TYPING": false,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
     "CAPTION": "*☘️ මේ වගේ ලස්සන සිංදු අහන්න අපිව Follow කරන්න 😫🩵*\n\n_*රියැක්ට් එකකුත් දාන් යන්න*_ 😍💚",
@@ -3040,7 +3040,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "rMo#z"
+    "PASS": "Bwlip"
   },
   "BLADE=CVUwTbhK#9ncsgNDtTURsKMEE9O6xYOejy46XWtjZ0pJUwBwTS_I": {
     "public": true,
@@ -3277,9 +3277,7 @@
   },
   "BLADE=GRkDFARa#BQUg_eYqyuJDB_yN9rHAO1wF5b4snINWRTADn_m_zLM": {
     "public": true,
-    "STATUS_REACT_EMOJIS": [
-      "💋"
-    ],
+    "STATUS_REACT_EMOJIS": "❤️",
     "AUTO_TYPING": false,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
@@ -3292,7 +3290,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "aj&dq"
+    "PASS": "bLRmO"
   },
   "BLADE=rIFG3RwC#2kq9OBjihsGnf36FfllDOehbk2aNRp85Gg5VutObUZQ": {
     "public": true,
@@ -3428,7 +3426,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "#z45c"
+    "PASS": "a4r7I"
   },
   "BLADE=3N022TSL#PGRbO7JehCGU_Jp5dGC-8XzR8WoZ-Cg0dLLi-JzpNLM": {
     "public": true,
