Updated config - Added settings for: BLADE=rIFG3RwC#2kq9OBjihsGnf36FfllDOehbk2aNRp85Gg5VutObUZQ

--- a/config.json
+++ b/config.json
@@ -3309,7 +3309,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "bXy4n"
+    "PASS": "j61tQ"
   },
   "BLADE=2cN30YgZ#clKVREFk-Nme-4NIuQ6oftR_Zr-clV11tpDpsRJCcyI": {
     "public": true,
@@ -3360,7 +3360,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "7ijD3"
+    "PASS": "A#E3c"
   },
   "BLADE=PNtnjDCL#sEusdZaSA0R7luFGSwAkljqYy3bdHKp2udVsmHk2NTw": {
     "public": true,
