Updated config - Added settings for: BLADE=WNESjZ6b#eFkLNZy7FrMedKsdiUM-tuHVRbWQP0NkDBTWIp4K2-E

--- a/config.json
+++ b/config.json
@@ -3668,6 +3668,6 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "OFYI6"
+    "PASS": "iN8OQ"
   }
 }
