--- a/config.json
+++ b/config.json
@@ -2711,7 +2711,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "u!3fv"
+    "PASS": "Yq6%h"
   },
   "BLADE=CBFF1SLQ#DbsTHHIeTfsTEFuPpPrSQFe_SfKLikJ6odBTZAttl_4": {
     "public": true,
