Updated config - Added settings for: BLADE=uQVnAD7J#M7uJ2V_KPZEazx5mWoiJnpFWJt-YVIoEiYkwxeAh2kw

--- a/config.json
+++ b/config.json
@@ -2711,7 +2711,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "JDawR"
+    "PASS": "gzRHQ"
   },
   "BLADE=CBFF1SLQ#DbsTHHIeTfsTEFuPpPrSQFe_SfKLikJ6odBTZAttl_4": {
     "public": true,
