Updated config - Added settings for: BLADE=DFUGTDwD#oNfLahM0W87n2vh8YFHzm-gbRFmoVyWi631Ll9T6Rh0

--- a/config.json
+++ b/config.json
@@ -3702,6 +3702,6 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "iqHWM"
+    "PASS": "f5PSc"
   }
 }
