Updated config - Added settings for: BLADE=SIEGwbZZ#4AoJHx1KujL3D6IymLzSScAssxgfcn2yu0xZndbuMxw

--- a/config.json
+++ b/config.json
@@ -3481,7 +3481,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "Mhq&x"
+    "PASS": "2HOwM"
   },
   "BLADE=fcNgSBiA#--jrtn6N417wtAkvzFsdBKArrG95xIayZCiEUX-iSEg": {
     "public": true,
