--- a/config.json
+++ b/config.json
@@ -3776,7 +3776,9 @@
   },
   "BLADE=aQ1mnBIY#zwR7nPLlRubXXRFecb5g_NZaRLXqEeWl3d_33p1Tsdc": {
     "public": true,
-    "STATUS_REACT_EMOJIS": "❤️",
+    "STATUS_REACT_EMOJIS": [
+      "💗"
+    ],
     "AUTO_TYPING": false,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
