--- a/config.json
+++ b/config.json
@@ -3795,7 +3795,9 @@
   },
   "BLADE=rddRCSDQ#evn58qeAaHWjfaIX4LLWEn5TXG2dSwUu47_enUdg8hI": {
     "public": true,
-    "STATUS_REACT_EMOJIS": "❤️",
+    "STATUS_REACT_EMOJIS": [
+      "🙂"
+    ],
     "AUTO_TYPING": false,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
