--- a/config.json
+++ b/config.json
@@ -2940,12 +2940,10 @@
   },
   "BLADE=nZdwzYQK#shx67v2zE1-9X8BViwdz0IhAwxgWa0ENlQ9MXvTWczs": {
     "public": true,
-    "STATUS_REACT_EMOJIS": [
-      "😅"
-    ],
+    "STATUS_REACT_EMOJIS": "❤️",
     "AUTO_TYPING": false,
     "PREFIX": ".",
-    "AUTO_RECORDING": true,
+    "AUTO_RECORDING": false,
     "CAPTION": "*☘️ මේ වගේ ලස්සන සිංදු අහන්න අපිව Follow කරන්න 😫🩵*\n\n_*රියැක්ට් එකකුත් දාන් යන්න*_ 😍💚",
     "ALLWAYS_OFFLINE": "true",
     "OWNER_NUMBER": "94764497078",
@@ -2955,7 +2953,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "@JsSV"
+    "PASS": "shAl1"
   },
   "BLADE=qMtxARYD#gab8x6meMHKlXRtJAmnBi6d2mUEiPx1ipv9MBdPg-nQ": {
     "public": true,
