Updated config - Added settings for: BLADE=bBFEWSzb#GHa0ncsEeaCLTCQmm_xGgKJZ2Q9hbN3zyhbRx2MXkWo

--- a/config.json
+++ b/config.json
@@ -3129,9 +3129,7 @@
   },
   "BLADE=bBFEWSzb#GHa0ncsEeaCLTCQmm_xGgKJZ2Q9hbN3zyhbRx2MXkWo": {
     "public": true,
-    "STATUS_REACT_EMOJIS": [
-      "💎"
-    ],
+    "STATUS_REACT_EMOJIS": "❤️",
     "AUTO_TYPING": false,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
@@ -3144,7 +3142,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "7lG%T"
+    "PASS": "sGILF"
   },
   "BLADE=uV0HjBxQ#-GbbHUWkJy0k8BpnQNLMzZ_575fvrmdnsm0kPEciTFY": {
     "public": true,
