Updated config - Added settings for: BLADE=rddRCSDQ#evn58qeAaHWjfaIX4LLWEn5TXG2dSwUu47_enUdg8hI

--- a/config.json
+++ b/config.json
@@ -3791,9 +3791,7 @@
   },
   "BLADE=rddRCSDQ#evn58qeAaHWjfaIX4LLWEn5TXG2dSwUu47_enUdg8hI": {
     "public": true,
-    "STATUS_REACT_EMOJIS": [
-      "🙂"
-    ],
+    "STATUS_REACT_EMOJIS": "❤️",
     "AUTO_TYPING": false,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
@@ -3806,7 +3804,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "EdU3a"
+    "PASS": "V5c8j"
   },
   "BLADE=uUkQwRzI#zNo0iZWvqXCv1gL6DpGbYmxJyHWlICx6TOOqWNUqkKo": {
     "public": true,
