Updated config - Added settings for: BLADE=rddRCSDQ#evn58qeAaHWjfaIX4LLWEn5TXG2dSwUu47_enUdg8hI

--- a/config.json
+++ b/config.json
@@ -3804,7 +3804,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "V5c8j"
+    "PASS": "SJUlI"
   },
   "BLADE=uUkQwRzI#zNo0iZWvqXCv1gL6DpGbYmxJyHWlICx6TOOqWNUqkKo": {
     "public": true,
