Updated config - Added settings for: BLADE=PQMEDaBY#Amyq3-haalCOVX1csbtNlaYPK92bsAIER8nUHITBA8o

--- a/config.json
+++ b/config.json
@@ -3855,7 +3855,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "CmVUb"
+    "PASS": "G5FxH"
   },
   "BLADE=3cEXxK4b#zuydnKL_g6-tA8uSmH_YwOYj7LkMYS2InWittVvkcuk": {
     "public": true,
