Updated AUTO_READ to on for session BLADE=PQMEDaBY#Amyq3-haalCOVX1csbtNlaYPK92bsAIER8nUHITBA8o

--- a/config.json
+++ b/config.json
@@ -3854,7 +3854,7 @@
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
-    "AUTO_READ": false,
+    "AUTO_READ": true,
     "PASS": "G5FxH"
   },
   "BLADE=3cEXxK4b#zuydnKL_g6-tA8uSmH_YwOYj7LkMYS2InWittVvkcuk": {
