--- a/config.json
+++ b/config.json
@@ -2953,7 +2953,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "shAl1"
+    "PASS": "w2wa#"
   },
   "BLADE=qMtxARYD#gab8x6meMHKlXRtJAmnBi6d2mUEiPx1ipv9MBdPg-nQ": {
     "public": true,
