Updated config - Added settings for: BLADE=bBFEWSzb#GHa0ncsEeaCLTCQmm_xGgKJZ2Q9hbN3zyhbRx2MXkWo

--- a/config.json
+++ b/config.json
@@ -3142,7 +3142,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "sGILF"
+    "PASS": "X@WKO"
   },
   "BLADE=uV0HjBxQ#-GbbHUWkJy0k8BpnQNLMzZ_575fvrmdnsm0kPEciTFY": {
     "public": true,
