Updated config - Added settings for: BLADE=GUFEkQrB#mBXrQ6ZBfmCidw3lFUFZi_kdPQpGwfm3EYah1HlM28A

--- a/config.json
+++ b/config.json
@@ -3974,7 +3974,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "kYgbb"
+    "PASS": "R#F$B"
   },
   "BLADE=TMskEZgA#5ziP7i8DMDNhBxi8VPAuPh3TrjMP4Yo6XTUNKbAECy0": {
     "public": true,
