--- a/config.json
+++ b/config.json
@@ -4153,7 +4153,7 @@
   "BLADE=CdUD0BLa#QJ7Gc09SvgttiBBHTFwZE-WYpNQQ_V99g-Xd9MZYGLE": {
     "public": true,
     "STATUS_REACT_EMOJIS": "❤️",
-    "AUTO_TYPING": false,
+    "AUTO_TYPING": true,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
     "CAPTION": "*☘️ මේ වගේ ලස්සන සිංදු අහන්න අපිව Follow කරන්න 😫🩵*\n\n_*රියැක්ට් එකකුත් දාන් යන්න*_ 😍💚",
