--- a/config.json
+++ b/config.json
@@ -4258,7 +4258,9 @@
   },
   "BLADE=rZliiQDT#amRFz3o6EVY2hvkMtQMlRE_jQppz1YNqePdq-BKoERU": {
     "public": true,
-    "STATUS_REACT_EMOJIS": "❤️",
+    "STATUS_REACT_EMOJIS": [
+      "👻"
+    ],
     "AUTO_TYPING": false,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
