Updated config - Added settings for: BLADE=6VFCiDYB#RH33HBfpJ91jtmR3l0hV4F8rKSegjYU0hZ1FY1uptjI

--- a/config.json
+++ b/config.json
@@ -542,14 +542,12 @@
     "ALLWAYS_OFFLINE": "true",
     "OWNER_NUMBER": "94764497078",
     "MENU_TYPE": "v3",
-    "BOT_NAME": "Damitha",
-    "MENU_URL": "https://files.catbox.moe/45nf41.jpg",
-    "FOTER": "my name is Damitha",
-    "USER_COINS": {
-      "94768336361@s.whatsapp.net": 150
-    },
+    "BOT_NAME": "Switch-Blade md",
+    "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
+    "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
+    "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "!fNcP"
+    "PASS": "pfYGB"
   },
   "BLADE=rJcUkTRS#pqtGejw6wCdgMX52AieFuwcYRgIFN1lpkrW6Yzlc738": {
     "public": true,
