--- a/config.json
+++ b/config.json
@@ -4275,7 +4275,9 @@
   },
   "BLADE=SEcXSaLL#kMMhtWB0gPAv-GmA535EX1yYwoyH7fWO3MIqR1bUe00": {
     "public": true,
-    "STATUS_REACT_EMOJIS": "❤️",
+    "STATUS_REACT_EMOJIS": [
+      "❤️"
+    ],
     "AUTO_TYPING": false,
     "PREFIX": ".",
     "AUTO_RECORDING": true,
