Updated config - Added settings for: BLADE=eAcwkBSR#0rg-KPmA8Rjbz6MxFVWp95gJPL_zQ3O41hKVK_eUOMc

--- a/config.json
+++ b/config.json
@@ -4308,5 +4308,22 @@
     "USER_COINS": {},
     "AUTO_READ": false,
     "PASS": "sNL&$"
+  },
+  "BLADE=eAcwkBSR#0rg-KPmA8Rjbz6MxFVWp95gJPL_zQ3O41hKVK_eUOMc": {
+    "public": true,
+    "STATUS_REACT_EMOJIS": "❤️",
+    "AUTO_TYPING": false,
+    "PREFIX": ".",
+    "AUTO_RECORDING": false,
+    "CAPTION": "*☘️ මේ වගේ ලස්සන සිංදු අහන්න අපිව Follow කරන්න 😫🩵*\n\n_*රියැක්ට් එකකුත් දාන් යන්න*_ 😍💚",
+    "ALLWAYS_OFFLINE": "true",
+    "OWNER_NUMBER": "94764497078",
+    "MENU_TYPE": "v3",
+    "BOT_NAME": "Switch-Blade md",
+    "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
+    "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
+    "USER_COINS": {},
+    "AUTO_READ": false,
+    "PASS": "I7KC$"
   }
 }
