Updated STATUS_REACT_EMOJIS to ✅ for session BLADE=eAcwkBSR#0rg-KPmA8Rjbz6MxFVWp95gJPL_zQ3O41hKVK_eUOMc

--- a/config.json
+++ b/config.json
@@ -4311,7 +4311,9 @@
   },
   "BLADE=eAcwkBSR#0rg-KPmA8Rjbz6MxFVWp95gJPL_zQ3O41hKVK_eUOMc": {
     "public": true,
-    "STATUS_REACT_EMOJIS": "❤️",
+    "STATUS_REACT_EMOJIS": [
+      "✅"
+    ],
     "AUTO_TYPING": true,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
