--- a/config.json
+++ b/config.json
@@ -4114,12 +4114,10 @@
   },
   "BLADE=KR0WERYa#_7iPA15-iDDKbbnoMvk5o3TvPi9f06o_foRsPdG_iiM": {
     "public": true,
-    "STATUS_REACT_EMOJIS": [
-      "💗"
-    ],
+    "STATUS_REACT_EMOJIS": "❤️",
     "AUTO_TYPING": false,
     "PREFIX": ".",
-    "AUTO_RECORDING": true,
+    "AUTO_RECORDING": false,
     "CAPTION": "*☘️ මේ වගේ ලස්සන සිංදු අහන්න අපිව Follow කරන්න 😫🩵*\n\n_*රියැක්ට් එකකුත් දාන් යන්න*_ 😍💚",
     "ALLWAYS_OFFLINE": "true",
     "OWNER_NUMBER": "94764497078",
@@ -4129,7 +4127,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "rgr7M"
+    "PASS": "fny6C"
   },
   "BLADE=3d10CZ6L#VykwGWJZCS-zN3aT5kuJRIovS8wHYD5MnKWLavvT0Zg": {
     "public": true,
