Updated config - Added settings for: BLADE=KR0WERYa#_7iPA15-iDDKbbnoMvk5o3TvPi9f06o_foRsPdG_iiM

--- a/config.json
+++ b/config.json
@@ -4127,7 +4127,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "fny6C"
+    "PASS": "0a3q0"
   },
   "BLADE=3d10CZ6L#VykwGWJZCS-zN3aT5kuJRIovS8wHYD5MnKWLavvT0Zg": {
     "public": true,
