--- a/config.json
+++ b/config.json
@@ -4114,7 +4114,9 @@
   },
   "BLADE=KR0WERYa#_7iPA15-iDDKbbnoMvk5o3TvPi9f06o_foRsPdG_iiM": {
     "public": true,
-    "STATUS_REACT_EMOJIS": "❤️",
+    "STATUS_REACT_EMOJIS": [
+      "☠️"
+    ],
     "AUTO_TYPING": false,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
