--- a/config.json
+++ b/config.json
@@ -4483,7 +4483,9 @@
   },
   "BLADE=uQ0mDD5S#EFqTcc9zazCRfAb3IdRyTcblvrwhHgKoGUtzqQt047k": {
     "public": true,
-    "STATUS_REACT_EMOJIS": "❤️",
+    "STATUS_REACT_EMOJIS": [
+      "💗"
+    ],
     "AUTO_TYPING": false,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
