Updated AUTO_RECORDING to off for session BLADE=uQ0mDD5S#EFqTcc9zazCRfAb3IdRyTcblvrwhHgKoGUtzqQt047k

--- a/config.json
+++ b/config.json
@@ -4488,7 +4488,7 @@
     ],
     "AUTO_TYPING": false,
     "PREFIX": ".",
-    "AUTO_RECORDING": true,
+    "AUTO_RECORDING": false,
     "CAPTION": "*☘️ මේ වගේ ලස්සන සිංදු අහන්න අපිව Follow කරන්න 😫🩵*\n\n_*රියැක්ට් එකකුත් දාන් යන්න*_ 😍💚",
     "ALLWAYS_OFFLINE": "true",
     "OWNER_NUMBER": "94764497078",
