--- a/config.json
+++ b/config.json
@@ -4672,7 +4672,9 @@
   },
   "BLADE=WNsHiC7J#_tEAGov2fkMFuiaXD2CrVjH8H197sNuOeUJTV-cZy80": {
     "public": true,
-    "STATUS_REACT_EMOJIS": "❤️",
+    "STATUS_REACT_EMOJIS": [
+      "☠️"
+    ],
     "AUTO_TYPING": false,
     "PREFIX": ".",
     "AUTO_RECORDING": true,
