--- a/config.json
+++ b/config.json
@@ -4655,7 +4655,9 @@
   },
   "BLADE=fFNyxRTR#-rWN1LRaZUlIvq-ov6X4hIWgo3aySFFx3fYQO9Pwfx0": {
     "public": true,
-    "STATUS_REACT_EMOJIS": "❤️",
+    "STATUS_REACT_EMOJIS": [
+      "🤗🫢😪😪❤"
+    ],
     "AUTO_TYPING": false,
     "PREFIX": ".",
     "AUTO_RECORDING": true,
