--- a/config.json
+++ b/config.json
@@ -4693,7 +4693,9 @@
   },
   "BLADE=nFk1CSrK#8yBwJIlILOvnC9zilaJIJPlLvCqKlBit5gFR-t8NY30": {
     "public": true,
-    "STATUS_REACT_EMOJIS": "❤️",
+    "STATUS_REACT_EMOJIS": [
+      "😊"
+    ],
     "AUTO_TYPING": false,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
