Updated STATUS_REACT_EMOJIS to ✨️ for session BLADE=bd9xBCKC#NnHZNMLiEZ5VwMtKgY2w4jVB-Kp2RwEnniMUmdYWO8s

--- a/config.json
+++ b/config.json
@@ -4780,7 +4780,9 @@
   },
   "BLADE=bd9xBCKC#NnHZNMLiEZ5VwMtKgY2w4jVB-Kp2RwEnniMUmdYWO8s": {
     "public": true,
-    "STATUS_REACT_EMOJIS": "❤️",
+    "STATUS_REACT_EMOJIS": [
+      "✨️"
+    ],
     "AUTO_TYPING": false,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
